<resources>
    <string name="app_name">DatingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="more">more</string>

    <string name="str1">Special, Cheeze, Tikka, and malae boti piza,Special, Cheeze, Tikka, and malae boti piza,Special, Cheeze,</string>
    <string name="str2">Find out latest news everyday about sneakers and more</string>
    <string name="findstore">Find stores near to you easily.You can also check forums</string>
    <string name="brandNameOne">Archive DNA</string>
    <string name="brandAddressOne">Nike Air Zoom - Chili Red - 2003</string>
    <string name="dateOne">1 Aug</string>
    <string name="brandNamtwo">Archive DNA</string>
    <string name="brandAddresstwo">Sneaker Shoe Note - 2004</string>
    <string name="datetwo">1 October</string>
    <string name="headerTitleOne">John Paul</string>
    <string name="headerTitleTwo">Expert</string>
    <string name="history">History</string>
    <string name="aboutUs">About Us</string>
    <string name="userdisplay">Users Display</string>
    <string name="nearme">Near me</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="sharenow">Share Now:</string>
    <string name="profileViewEmail">john@gmail.com</string>
    <string name="profileViewNumber">1-541-754-3010</string>
    <string name="notificatinDummyText">This is dummy text. You can also check forums</string>
    <string name="dummydate">01-01-2020</string>
    <string name="dummytime">09:40 am</string>
    <string name="dummydate1">11-12-2022</string>
    <string name="dummytime1">10:05 pm</string>
    <string name="metaversedummydata">In science fiction, the is a hypothetical iteration of the Internet as a single, universal, and immersive virtual world</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_92">+92-</string>
    <string name="_1234567">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_send_to">Enter OTP send to</string>
    <string name="didn_t_receive_the_otp">didn\'t receive the OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>


</resources>