<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickUserDispalyLayout"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:weightSum="2">

        <ImageView
            android:id="@+id/historyIconid"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/history_vector" />

        <TextView
            android:id="@+id/historyTextid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:padding="10dp"
            android:text="@string/userdisplay"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="30dp"
        android:onClick="onClickNearMeLayout">

        <ImageView
            android:id="@+id/aboutUsIconid"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/aboutus_vector" />
        <TextView
            android:id="@+id/aboutUsTextid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"
            android:layout_weight="1.3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/nearme"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="30dp">

        <ImageView
            android:id="@+id/privacyPolicyIconid"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/privacypolicy_vector" />
        <TextView
            android:id="@+id/privacyPolicyTextid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/privacypolicy"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="30dp">

        <ImageView
            android:id="@+id/invitefriendsIconid"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/invitefriends_vector" />
        <TextView
            android:id="@+id/invitefriendsTextid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/invitefriends"/>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="30dp"
        android:onClick="onClickLogoutLayout">

        <ImageView
            android:id="@+id/logoutIconid"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/logout_vector" />
        <TextView
            android:id="@+id/logoutTextid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"
            android:layout_weight="1.3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/logout"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:paddingLeft="40dp"
        android:onClick="onClickSettingsLayout">

        <TextView
            android:id="@+id/shareNowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sharenow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="onClickPrivacyLayout">
        <ImageButton
            android:id="@+id/fbImageId"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:onClick="onClickFB"
            android:background="@drawable/fbicon" />

        <ImageView
            android:id="@+id/twitterImageId"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:onClick="onClickTwitter"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/twitter" />
        <ImageView
            android:id="@+id/instaImageId"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="onClickInsta"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/insta" />
    </LinearLayout>
</LinearLayout>